Fix problem with placeholder text not showing on signup form on firefox

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,6 @@ body {
   margin:auto;
   font-size:18px !important;
   color:#777 !important;
-  padding:1.25em !important;
   margin:10px !important;
 }
 
